[project]
name = "rain-code"
version = "0.1.0"
description = "Encrypt the Python code you submit to AtCoder."
authors = [
    { name = "nahco314", email = "nahco3_ta@yahoo.co.jp" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
rain = "rain.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool]
[tool.black]
line-length = 88

[tool.isort]
line_length = 88
force_single_line = true

[tool.rye]
managed = true
dev-dependencies = ["black~=23.3.0", "isort~=5.12.0"]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rain"]
