[project]
name = "rain-code"
version = "0.2.0"
description = "Encrypt the Python code you submit to AtCoder."
authors = [
    { name = "nahco314", email = "nahco3_ta@yahoo.co.jp" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
rain = "rain.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0.1",
]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rain"]
